--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,7 +1,9 @@
-$heading-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif
+$heading-font-family: "Commissioner", sans-serif
 $body-font-family: $heading-font-family
 
 $header-background: none
 $header-border-bottom-width: 0
 $hero-background-color: none
 $footer-background-color: none
+$footer-logo-height: 80px
+$footer-logo-height-desktop: 120px
