--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -1,1 +1,4 @@
-// @include font-face("Font name", font-file-in-fonts-without-extensions)
+@include font-face("Commissioner", Commissioner-Regular)
+@include font-face("Commissioner", Commissioner-Bold, $weight: bold)
+@include font-face("Commissioner", Commissioner-Italic, $style: italic)
+@include font-face("Commissioner", Commissioner-BoldItalic, $style: italic, $weight: bold)
