--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -1,2 +1,12 @@
 .logo
     max-width: 400px
+    .logo-text
+        line-height: 90% !important
+.projects,
+.block-projects
+    .project
+        .project-meta
+            @include media-breakpoint-up(desktop)
+                position: absolute
+                top: 0
+                right: 0
